--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-animate-height": "^2.0.21",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
     "react-perfect-scrollbar": "^1.5.3",
