--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@material-ui/lab": "^4.0.0-alpha.52",
     "@material-ui/styles": "^4.9.13",
     "@types/react-router-dom": "^5.1.3",
+    "@types/react-swipeable-views": "^0.13.0",
     "aws-amplify": "^2.2.2",
     "aws-amplify-react": "^3.1.3",
     "chart.js": "^2.9.3",
@@ -55,6 +56,7 @@
     "react-dom": "^16.12.0",
     "react-perfect-scrollbar": "^1.5.3",
     "react-router-dom": "^5.1.2",
+    "react-swipeable-views": "^0.13.9",
     "uuid": "^3.4.0",
     "validate.js": "^0.13.1"
   },
