--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "aws-amplify-react": "^3.1.3",
     "chart.js": "^2.9.3",
     "clsx": "^1.0.4",
+    "cryptocurrency-icons": "^0.16.1",
     "currency-codes": "^2.1.0",
     "history": "^4.10.1",
     "moment": "^2.24.0",
