--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
     "@material-ui/lab": "^4.0.0-alpha.52",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.9.13",
+    "@types/crypto-js": "^3.1.46",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-swipeable-views": "^0.13.0",
     "aws-amplify": "^2.2.2",
     "aws-amplify-react": "^3.1.3",
     "chart.js": "^2.9.3",
     "clsx": "^1.0.4",
+    "crypto-js": "^4.0.0",
     "cryptocurrency-icons": "^0.16.1",
     "currency-codes": "^2.1.0",
     "history": "^4.10.1",
