--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/react-swipeable-views": "^0.13.0",
     "aws-amplify": "^2.2.2",
     "aws-amplify-react": "^3.1.3",
+    "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "clsx": "^1.0.4",
     "crypto-js": "^4.0.0",
