--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
     "url": "https://github.com/okcodes/cash-flow-app/issues"
   },
   "dependencies": {
-    "@date-io/moment": "1.x",
-    "@material-ui/core": "^4.9.13",
+    "@date-io/moment": "^2.10.6",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.52",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
-    "@material-ui/styles": "^4.9.13",
+    "@material-ui/styles": "^4.10.0",
     "@types/crypto-js": "^3.1.46",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-swipeable-views": "^0.13.0",
