--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.10.0",
+    "@types/accounting": "^0.4.1",
     "@types/crypto-js": "^3.1.46",
     "@types/react-router-dom": "^5.1.3",
     "@types/react-swipeable-views": "^0.13.0",
+    "@types/react-text-mask": "^5.4.6",
+    "accounting": "^0.4.1",
     "aws-amplify": "^2.2.2",
     "aws-amplify-react": "^3.1.3",
     "chart.js": "^2.9.3",
@@ -59,6 +62,7 @@
     "react-animate-height": "^2.0.21",
     "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.12.0",
+    "react-number-format": "^4.4.1",
     "react-perfect-scrollbar": "^1.5.3",
     "react-router-dom": "^5.1.2",
     "react-swipeable-views": "^0.13.9",
