--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "url": "https://github.com/okcodes/cash-flow-app/issues"
   },
   "dependencies": {
-    "@date-io/moment": "^2.10.6",
+    "@date-io/date-fns": "^1.3.13",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
@@ -55,6 +55,7 @@
     "crypto-js": "^4.0.0",
     "cryptocurrency-icons": "^0.16.1",
     "currency-codes": "^2.1.0",
+    "date-fns": "^2.16.1",
     "history": "^4.10.1",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
